// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete project 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li></li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--WithoutFlushLoader-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`delete project 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <!--if-->
    <!--if-->
    <li>Delete</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"modal\\">
    <div class=\\"content\\">
      <div class=\\"header\\">Delete project</div>
      <div class=\\"body\\">Do you want delete project \\"Test\\"?</div>
      <div class=\\"footer\\">
        <button class=\\"ok danger\\"><span>Confirm</span></button>
        <button class=\\"cancel\\"><span>Cancel</span></button>
      </div>
    </div>
  </div>
  <!--ConfirmModal-->
  <!--if-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`delete project 3`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
